Refactor DO crafting modules and add auditing